2013-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Decrease stack usage in BtrFS.

	We have only 92K of stack and using over 4K per frame is wasteful

	* grub-core/fs/btrfs.c (grub_btrfs_lzo_decompress): Allocate on heap
	rather than stack.

2013-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Decrease stack usage in JFS.

	We have only 92K of stack and using over 4K per frame is wasteful

	* grub-core/fs/jfs.c (getblk): Allocate on heap rather than on
	stack. Note: this function is recursive.
	(grub_jfs_read_inode): Read only part we care about.

2013-11-16  Leif Lindholm <leif.lindholm@linaro.org>

	* grub-core/kern/arm/uboot/startup.S: fix grub_uboot_syscall va_arg
	handling

2013-11-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* configure.ac: Restore -nostdlib for libgcc symbols tests.

2013-11-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* docs/grub.texi (Environment): Document cmdpath.

2013-11-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_machine_get_bootlocation):
	Remove "unused" attribute from arguments, they are used.

2013-11-15  Colin Watson  <cjwatson@debian.org>

	* .gitignore: Only ignore grub-mk* at the top level.

2013-11-15  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-reboot.in (usage): Fix a typo.

2013-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace libgcc version of ctz with our own.

	On upcoming arm64 port libgcc ctz* are not usable in standalone
	environment. Since we need ctz* for this case and implementation is
	in C we may as well use it on all concerned platforms.

2013-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Probe for linking format rather than guessing it based
	on target_os.

2013-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/xen/xendisk.c (grub_xendisk_fini): Set state to
	"1" prior to handoff.

	Reported by: M A Young.

2013-11-14  Vladimir Serbinenko  <phcoder@gmail.com>
