@@ -1,5 +1,14 @@
 2013-11-16  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Decrease stack usage in mdraid 0.9x.
+
+	We have only 92K of stack and using over 4K per frame is wasteful
+
+	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Allocate on heap
+	rather than stack.
+
+2013-11-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Decrease stack usage in BtrFS.
 
 	We have only 92K of stack and using over 4K per frame is wasteful
